--- a/hybrid.ipynb
+++ b/hybrid.ipynb
@@ -36,13 +36,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3451e06",
+   "metadata": {},
+   "source": [
+    "Check the validation of dataset format"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "e494fdf8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = pd.read_excel('shortcourses2566.xlsx')"
+    "file_name = 'dataset.xlsx'\n",
+    "file = pd.read_excel(file_name)"
    ]
   },
   {
@@ -55,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "0f80a6f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "course_counts = pd.DataFrame(file)['หลักสูตรอบรมระยะสั้น'].value_counts()\n",
+    "course_counts = pd.DataFrame(file)['course'].value_counts()\n",
     "courses = pd.Series(course_counts.index)\n",
     "courses = courses.sort_values().set_axis(range(0,len(courses)))\n",
     "number_of_courses = len(course_counts)"
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "757c2d0e75f07f69",
    "metadata": {
     "ExecuteTime": {
@@ -150,7 +159,7 @@
        "'This will create a new matrix where each row is the concatenation of the \\ncorresponding rows from tfidf_matrix and knn_matrix. The NearestNeighbors model\\nis then fit on this combined matrix.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "dcc9d555",
    "metadata": {},
    "outputs": [],
@@ -195,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "65736836",
    "metadata": {},
    "outputs": [
@@ -257,7 +266,7 @@
        "152  เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...         0.723664"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1691c4447c9c28ce",
    "metadata": {
     "ExecuteTime": {
@@ -316,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e662f15c252f7be0",
    "metadata": {
     "ExecuteTime": {
@@ -331,8 +340,8 @@
    "source": [
     "def recommender_knn_by_user(user_name, n_recommendations):\n",
     "    df = {\n",
-    "        'User': pd.Series(file['ชื่อ-นามสกุล (อังกฤษ)']),\n",
-    "        'Course': pd.Series(file['หลักสูตรอบรมระยะสั้น'])\n",
+    "        'User': pd.Series(file['username']),\n",
+    "        'Course': pd.Series(file['course'])\n",
     "    }\n",
     "    \n",
     "    user_course = pd.DataFrame(df)\n",
@@ -363,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "a4a4d349",
    "metadata": {},
    "outputs": [],
@@ -395,15 +404,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "a95d82d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def recommender_hybrid_by_user(user_name, n_recommendations):\n",
     "    df = {\n",
-    "        'User': pd.Series(file['ชื่อ-นามสกุล (อังกฤษ)']),\n",
-    "        'Course': pd.Series(file['หลักสูตรอบรมระยะสั้น'])\n",
+    "        'User': pd.Series(file['username']),\n",
+    "        'Course': pd.Series(file['course'])\n",
     "    }\n",
     "    \n",
     "    user_course = pd.DataFrame(df)\n",
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "bf895bd5e81470f1",
    "metadata": {
     "ExecuteTime": {
@@ -554,7 +563,7 @@
        "123    สอบคัดเลือกเพื่อเข้าอบรมหลักสูตรอบรมเข้มข้นระย...  0.007824"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "ce5d56e62ccafebc",
    "metadata": {
     "ExecuteTime": {
@@ -614,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "83e5605b241f020f",
    "metadata": {
     "ExecuteTime": {
@@ -660,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "1ebfde189788d1b0",
    "metadata": {
     "ExecuteTime": {
@@ -680,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "211ba17f",
    "metadata": {},
    "outputs": [
@@ -716,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "4a5ada54",
    "metadata": {},
    "outputs": [],
@@ -737,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "3eb5a748",
    "metadata": {},
    "outputs": [],
@@ -765,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "d31f84dd1f099bca",
    "metadata": {
     "ExecuteTime": {
