--- a/knn.ipynb
+++ b/knn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = pd.read_excel('shortcourses2566.xlsx')"
+    "file_name = 'dataset.xlsx'\n",
+    "file = pd.read_excel(file_name)"
    ]
   },
   {
@@ -39,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "course_counts = pd.DataFrame(file)['หลักสูตรอบรมระยะสั้น'].value_counts()\n",
+    "course_counts = pd.DataFrame(file)['course'].value_counts()\n",
     "courses = pd.Series(course_counts.index)\n",
     "courses = courses.sort_values().set_axis(range(0,len(courses)))\n",
     "number_of_courses = len(course_counts)"
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -78,13 +79,13 @@
        "Name: User, Length: 6127, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_name = file.loc[:, 'ชื่อ-นามสกุล (อังกฤษ)']\n",
+    "s_name = file.loc[:, 'username']\n",
     "Users = pd.Series(s_name, name='User')\n",
     "Users"
    ]
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -118,13 +119,13 @@
        "Name: Email, Length: 6127, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_email = file.loc[:, 'อีเมล'].fillna(\"\")\n",
+    "s_email = file.loc[:, 'email'].fillna(\"\")\n",
     "Emails = pd.Series(s_email ,name='Email')\n",
     "Emails"
    ]
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +159,7 @@
        "Name: Score Email, Length: 6127, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,12 +279,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ages = file.loc[:, 'อายุ']\n",
-    "educations = file.loc[:, 'วุฒิการศึกษา']\n",
+    "ages = file.loc[:, 'age']\n",
+    "educations = file.loc[:, 'education']\n",
     "age_education_scores = []\n",
     "\n",
     "for i,x in enumerate(educations):\n",
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -355,13 +356,13 @@
        "Name: Status, Length: 6127, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "status = file.loc[:, 'สถานะ'].fillna(\"\")\n",
+    "status = file.loc[:, 'payment'].fillna(\"\")\n",
     "status = pd.Series(status ,name='Status')\n",
     "status"
    ]
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -451,13 +452,13 @@
        "Name: Status, Length: 6127, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "address = file.loc[:, 'ที่อยู่'].fillna(\"\")\n",
+    "address = file.loc[:, 'address'].fillna(\"\")\n",
     "address = pd.Series(address ,name='Status')\n",
     "address"
    ]
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -517,11 +518,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "enrollment = file.loc[:, 'วันที่สมัครอบรม'].fillna(\"\")\n",
+    "enrollment = file.loc[:, 'date'].fillna(\"\")\n",
     "enrollment = pd.Series(enrollment ,name='Date')\n",
     "enrollment = enrollment.str.slice(start=-8, stop=-6)"
    ]
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,12 +554,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = file.loc[:, 'ชื่อ-นามสกุล (อังกฤษ)']\n",
-    "course = file.loc[:, 'หลักสูตรอบรมระยะสั้น']\n",
+    "user = file.loc[:, 'username']\n",
+    "course = file.loc[:, 'course']\n",
     "d = {\n",
     "    'User': user,\n",
     "    'Course': course,\n",
@@ -581,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -720,8 +721,9 @@
        "43   การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...         0.754774"
       ]
      },
+     "execution_count": 61,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -737,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
