--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "d3da61f397b9ca5d",
    "metadata": {
     "ExecuteTime": {
@@ -62,7 +62,8 @@
    },
    "outputs": [],
    "source": [
-    "file = pd.read_excel('shortcourses2566.xlsx')"
+    "file_name = 'dataset.xlsx'\n",
+    "file = pd.read_excel(file_name)"
    ]
   },
   {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "c368d2c6cb469623",
    "metadata": {
     "ExecuteTime": {
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "e4dc26afbc54f2c0",
    "metadata": {
     "ExecuteTime": {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "b3f21aedd43e6caf",
    "metadata": {
     "ExecuteTime": {
@@ -168,7 +169,7 @@
    "outputs": [],
    "source": [
     "# Take the series of courses from dataset column\n",
-    "content = file['หลักสูตรอบรมระยะสั้น'].drop_duplicates().fillna('')\n",
+    "content = file['course'].drop_duplicates().fillna('')\n",
     "courses = content.sort_values().set_axis(range(0,len(content)))\n",
     "\n",
     "# Check if the course is in Thai language or not\n",
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "349242dd",
    "metadata": {},
    "outputs": [],
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "cb5cd99f50462dca",
    "metadata": {
     "ExecuteTime": {
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "72a9699b",
    "metadata": {},
    "outputs": [],
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "ddf0d8ab318c7c87",
    "metadata": {
     "ExecuteTime": {
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "991b48164c403112",
    "metadata": {
     "ExecuteTime": {
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "c0f4db781812aba2",
    "metadata": {
     "ExecuteTime": {
@@ -452,7 +453,7 @@
        "33                    0.258951  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "594104f8545fe00",
    "metadata": {
     "ExecuteTime": {
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "fdf28ef643836d21",
    "metadata": {
     "ExecuteTime": {
@@ -564,8 +565,8 @@
    "source": [
     "def recommender_tfidf_by_user(user_name, n_recommendations):\n",
     "    df = {\n",
-    "        'User': pd.Series(file['ชื่อ-นามสกุล (อังกฤษ)']),\n",
-    "        'Course': pd.Series(file['หลักสูตรอบรมระยะสั้น'])\n",
+    "        'User': pd.Series(file['username']),\n",
+    "        'Course': pd.Series(file['course'])\n",
     "    }\n",
     "\n",
     "    user_course = pd.DataFrame(df)\n",
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "e2425ec0689e85cb",
    "metadata": {
     "ExecuteTime": {
@@ -701,7 +702,7 @@
        "133    หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...  0.183915"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "af84469a",
    "metadata": {},
    "outputs": [],
@@ -783,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "1f14300b",
    "metadata": {},
    "outputs": [],
@@ -819,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "3ca45e3b",
    "metadata": {},
    "outputs": [],
