change the way we store files

--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "d3da61f397b9ca5d",
    "metadata": {
     "ExecuteTime": {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "c368d2c6cb469623",
    "metadata": {
     "ExecuteTime": {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "e4dc26afbc54f2c0",
    "metadata": {
     "ExecuteTime": {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "b3f21aedd43e6caf",
    "metadata": {
     "ExecuteTime": {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "349242dd",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "cb5cd99f50462dca",
    "metadata": {
     "ExecuteTime": {
@@ -235,17 +235,44 @@
    "id": "f0180046",
    "metadata": {},
    "source": [
-    "Save file"
+    "Create path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "72a9699b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('tfidf_matrix.pickle', 'wb') as f:\n",
+    "import os\n",
+    "# Specify the folder path\n",
+    "folder_path = '/workspaces/recommendation-system/pickle'\n",
+    "\n",
+    "# Create the folder if it doesn't exist\n",
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs(folder_path)\n",
+    "\n",
+    "# Specify the file path\n",
+    "file_path = os.path.join(folder_path, 'tfidf.pickle')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16e1a530",
+   "metadata": {},
+   "source": [
+    "Export variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "26016968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(file_path, 'wb') as f:\n",
     "    pickle.dump(tfidf_matrix, f)"
    ]
   },
@@ -264,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "ddf0d8ab318c7c87",
    "metadata": {
     "ExecuteTime": {
@@ -296,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "991b48164c403112",
    "metadata": {
     "ExecuteTime": {
@@ -376,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "c0f4db781812aba2",
    "metadata": {
     "ExecuteTime": {
@@ -453,7 +480,7 @@
        "33                    0.258951  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "594104f8545fe00",
    "metadata": {
     "ExecuteTime": {
@@ -549,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "fdf28ef643836d21",
    "metadata": {
     "ExecuteTime": {
@@ -589,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "e2425ec0689e85cb",
    "metadata": {
     "ExecuteTime": {
@@ -702,7 +729,7 @@
        "133    หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...  0.183915"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "af84469a",
    "metadata": {},
    "outputs": [],
@@ -784,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "1f14300b",
    "metadata": {},
    "outputs": [],
@@ -815,20 +842,20 @@
    "id": "0f70b06f",
    "metadata": {},
    "source": [
-    "Export X and y"
+    "Export variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "3ca45e3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('tfidf_X.pickle', 'wb') as f:\n",
+    "# Create the file\n",
+    "with open(file_path, 'wb') as f:\n",
     "    pickle.dump(X, f)\n",
-    "with open('tfidf_y.pickle', 'wb') as f:\n",
-    "    pickle.dump(y, f)"
+    "    pickle.dump(y, f)\n"
    ]
   },
   {
