change the file location

--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "72a9699b",
    "metadata": {},
    "outputs": [],
@@ -251,10 +251,7 @@
     "\n",
     "# Create the folder if it doesn't exist\n",
     "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)\n",
-    "\n",
-    "# Specify the file path\n",
-    "file_path = os.path.join(folder_path, 'tfidf.pickle')"
+    "    os.makedirs(folder_path)"
    ]
   },
   {
@@ -267,11 +264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "26016968",
    "metadata": {},
    "outputs": [],
    "source": [
+    "file_path = os.path.join(folder_path, 'tfidf_matrix.pickle')\n",
     "with open(file_path, 'wb') as f:\n",
     "    pickle.dump(tfidf_matrix, f)"
    ]
@@ -852,10 +850,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the file\n",
+    "file_path = os.path.join(folder_path, 'tfidf_X.pickle')\n",
     "with open(file_path, 'wb') as f:\n",
     "    pickle.dump(X, f)\n",
-    "    pickle.dump(y, f)\n"
+    "\n",
+    "file_path = os.path.join(folder_path, 'tfidf_y.pickle')\n",
+    "with open(file_path, 'wb') as f:\n",
+    "    pickle.dump(y, f)"
    ]
   },
   {
