--- a/hybrid.ipynb
+++ b/hybrid.ipynb
@@ -85,15 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "6d1f6969",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('knn_matrix.pickle', 'rb') as f:\n",
+    "with open('./pickle/knn_matrix.pickle', 'rb') as f:\n",
     "    knn_matrix = pickle.load(f)\n",
     "\n",
-    "with open('tfidf_matrix.pickle', 'rb') as f:\n",
+    "with open('./pickle/tfidf_matrix.pickle', 'rb') as f:\n",
     "    tfidf_matrix = pickle.load(f)"
    ]
   },
