add python and interactive files

--- a/hybrid.ipynb
+++ b/hybrid.ipynb
@@ -85,15 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "6d1f6969",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./pickle/knn_matrix.pickle', 'rb') as f:\n",
+    "folder_path = './pickle'\n",
+    "\n",
+    "with open(f'{folder_path}/knn_matrix.pickle', 'rb') as f:\n",
     "    knn_matrix = pickle.load(f)\n",
     "\n",
-    "with open('./pickle/tfidf_matrix.pickle', 'rb') as f:\n",
+    "with open(f'{folder_path}/tfidf_matrix.pickle', 'rb') as f:\n",
     "    tfidf_matrix = pickle.load(f)"
    ]
   },
@@ -301,7 +303,7 @@
     "def recommender_knn_all_courses(course_name):\n",
     "    idx = process.extractOne(course_name, courses)[2]\n",
     "    # print('Selected movie:', courses[idx], 'Index:', idx)\n",
-    "    distances, indices = model_knn.kneighbors(knn_matrix[idx], n_neighbors=len(courses))\n",
+    "    distances, indices = model_combined.kneighbors(knn_matrix[idx], n_neighbors=len(courses))\n",
     "    recommendations = [courses[i].where(i!=idx) for i in indices]\n",
     "    recommended_courses = recommendations[0][1:]\n",
     "    scores = 1 - distances\n",
@@ -627,10 +629,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('knn_X.pickle', 'rb') as f:\n",
+    "with open(f'{folder_path}/knn_X.pickle', 'rb') as f:\n",
     "    knn_X = pickle.load(f)\n",
     "\n",
-    "with open('knn_y.pickle', 'rb') as f:\n",
+    "with open(f'{folder_path}/knn_y.pickle', 'rb') as f:\n",
     "    knn_y = pickle.load(f)"
    ]
   },
@@ -730,9 +732,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('tfidf_X.pickle', 'rb') as f:\n",
+    "with open(f'{folder_path}/tfidf_X.pickle', 'rb') as f:\n",
     "    tfidf_X = pickle.load(f)\n",
-    "with open('tfidf_y.pickle', 'rb') as f:\n",
+    "with open(f'{folder_path}/tfidf_y.pickle', 'rb') as f:\n",
     "    tfidf_y = pickle.load(f)"
    ]
   },
