update necessary components

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jiro.DESKTOP-HOK2CVB\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\fuzzywuzzy\\fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
-      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -32,12 +23,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'dataset.xlsx'\n",
+    "file_name = 'dataset2.xlsx'\n",
     "file = pd.read_excel(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         Data Structures and Algorithms\n",
+       "1                             Calculus 1\n",
+       "2                  Fundamental English 1\n",
+       "3                    Engineering Drawing\n",
+       "4                   Introduction to ISNE\n",
+       "5    Basic Computer Programming for ISNE\n",
+       "Name: course, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course = file['course']\n",
+    "course = course.drop_duplicates()\n",
+    "course"
    ]
   },
   {
@@ -966,15 +985,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 3593)\t3.625\n",
+      "  (0, 4628)\t4.375\n"
+     ]
+    }
+   ],
    "source": [
     "# Pivot table by rotating course\n",
     "data = pd.pivot_table(predata, values='Score', index='Course', columns='User').fillna(0)\n",
     "\n",
     "# Convert dataframe to sparse matrix\n",
-    "knn_matrix = csr_matrix(data.values)"
+    "knn_matrix = csr_matrix(data.values))"
    ]
   },
   {
@@ -1107,6 +1135,99 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course</th>\n",
+       "      <th>Cosine Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n",
+       "      <td>0.672307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...</td>\n",
+       "      <td>0.722699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n",
+       "      <td>0.754774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>รังสีวิทยาวินิจฉัย</td>\n",
+       "      <td>0.739594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n",
+       "      <td>0.754774</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Course  Cosine Distance\n",
+       "0  เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...         0.672307\n",
+       "1  การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...         0.722699\n",
+       "2  การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...         0.754774\n",
+       "3                                 รังสีวิทยาวินิจฉัย         0.739594\n",
+       "4  หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...         0.754774"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def recommender_knn_by_user(username):\n",
+    "    # Filter the courses that the user has already taken\n",
+    "    user_courses = file.loc[file['username'] == username]['course']\n",
+    "    \n",
+    "    # Get the recommendations based on these courses\n",
+    "    recommendations = [recommender_knn(course) for course in user_courses]\n",
+    "\n",
+    "    # Reset index\n",
+    "    recommendations = pd.concat(recommendations).drop_duplicates(subset='Course', keep='first')\n",
+    "\n",
+    "    # Drop duplicated courses\n",
+    "    recommendations = recommendations.reset_index(drop=True)\n",
+    "\n",
+    "    return recommendations\n",
+    "\n",
+    "recommender_knn_by_user('PORPHAING JANTIP')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1218,7 +1339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
