--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -35,6 +35,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9fd90e4c",
+   "metadata": {},
+   "source": [
+    "Get filename from pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3fb4e1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./pickle/filename.pickle', 'rb') as f:\n",
+    "    filename = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b5f54b21a1aad86d",
    "metadata": {
     "collapsed": false,
@@ -48,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d3da61f397b9ca5d",
    "metadata": {
     "ExecuteTime": {
@@ -60,22 +79,9 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '--f=/home/codespace/.local/share/jupyter/runtime/kernel-v2-515e9htdtX76AMg.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m     filename \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39margv[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m# Now you can use the filename variable to open the file, etc.\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      6\u001b[0m         content \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m      7\u001b[0m         \u001b[38;5;66;03m# Do something with the content of the file\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[0;32m/workspaces/recommendation-system/.conda/lib/python3.12/site-packages/IPython/core/interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    304\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    305\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    306\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '--f=/home/codespace/.local/share/jupyter/runtime/kernel-v2-515e9htdtX76AMg.json'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "file_name = 'dataset.xlsx'\n",
+    "file_name = './uploads/' + filename\n",
     "file = pd.read_excel(file_name)"
    ]
   },
@@ -397,120 +403,6 @@
     "    # Set and sort index\n",
     "    recommendations = recommendations.set_axis(idx).drop(columns='Index')\n",
     "    return recommendations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1854ee47996040bd",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "source": [
-    "Test recommendation system using TF-IDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c0f4db781812aba2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-21T09:04:27.916332700Z",
-     "start_time": "2023-12-21T09:04:27.909157700Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Course</th>\n",
-       "      <th>Cosine Similarity Score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>หลักวิทยาการระบาด (Principles of Epidemiology)...</td>\n",
-       "      <td>0.372441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>การป้องกันการล้มสำหรับผู้สูงอายุ</td>\n",
-       "      <td>0.341441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>การบริบาลทางเภสัชกรรม สาขาผู้ป่วยมะเร็ง (ปี 25...</td>\n",
-       "      <td>0.258951</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  Course  \\\n",
-       "Index                                                      \n",
-       "132    หลักวิทยาการระบาด (Principles of Epidemiology)...   \n",
-       "37                      การป้องกันการล้มสำหรับผู้สูงอายุ   \n",
-       "33     การบริบาลทางเภสัชกรรม สาขาผู้ป่วยมะเร็ง (ปี 25...   \n",
-       "\n",
-       "       Cosine Similarity Score  \n",
-       "Index                           \n",
-       "132                   0.372441  \n",
-       "37                    0.341441  \n",
-       "33                    0.258951  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "recommender_tfidf('Cancer Epidemiology and Prevention')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "782f034ab119afb2",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "source": [
-    "Predata for hybrid recommendation"
    ]
   },
   {
@@ -911,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
