adjust the patterns

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -18,7 +18,8 @@
     "import pickle\n",
     "from scipy.sparse import csr_matrix\n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "from fuzzywuzzy import process"
+    "from fuzzywuzzy import process\n",
+    "import sys"
    ]
   },
   {
@@ -29,34 +30,6 @@
    "source": [
     "file_name = 'dataset2.xlsx'\n",
     "file = pd.read_excel(file_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         Data Structures and Algorithms\n",
-       "1                             Calculus 1\n",
-       "2                  Fundamental English 1\n",
-       "3                    Engineering Drawing\n",
-       "4                   Introduction to ISNE\n",
-       "5    Basic Computer Programming for ISNE\n",
-       "Name: course, dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "course = file['course']\n",
-    "course = course.drop_duplicates()\n",
-    "course"
    ]
   },
   {
