--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -30,7 +30,8 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "import translators as ts\n",
-    "import pickle"
+    "import pickle\n",
+    "import sys"
    ]
   },
   {
@@ -43,11 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c3fb4e1a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Receive the user name from app.py\n",
+    "user_input = sys.argv[1]\n",
+    "\n",
+    "# Get filename from pickle\n",
     "with open('./pickle/filename.pickle', 'rb') as f:\n",
     "    filename = pickle.load(f)"
    ]
@@ -100,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c368d2c6cb469623",
    "metadata": {
     "ExecuteTime": {
@@ -121,8 +126,7 @@
     "    for char in text:\n",
     "        if char.isalpha() and char.isascii():\n",
     "            return True\n",
-    "    return False\n",
-    "            "
+    "    return False"
    ]
   },
   {
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e4dc26afbc54f2c0",
    "metadata": {
     "ExecuteTime": {
@@ -173,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b3f21aedd43e6caf",
    "metadata": {
     "ExecuteTime": {
@@ -208,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "349242dd",
    "metadata": {},
    "outputs": [],
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "cb5cd99f50462dca",
    "metadata": {
     "ExecuteTime": {
@@ -259,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "72a9699b",
    "metadata": {},
    "outputs": [],
@@ -283,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "26016968",
    "metadata": {},
    "outputs": [],
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ddf0d8ab318c7c87",
    "metadata": {
     "ExecuteTime": {
@@ -340,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "991b48164c403112",
    "metadata": {
     "ExecuteTime": {
@@ -494,6 +498,9 @@
    "outputs": [],
    "source": [
     "def recommender_tfidf_by_user(user_name, n_recommendations):\n",
+    "\n",
+    "    n_recommendations = number_of_courses - 1\n",
+    "    \n",
     "    df = {\n",
     "        'User': pd.Series(file['username']),\n",
     "        'Course': pd.Series(file['course'])\n",
@@ -518,8 +525,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c7f3fe7",
+   "metadata": {},
+   "source": [
+    "Export to web page"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e2425ec0689e85cb",
    "metadata": {
     "ExecuteTime": {
@@ -531,114 +546,9 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Course</th>\n",
-       "      <th>Score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n",
-       "      <td>0.676301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...</td>\n",
-       "      <td>0.676301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>รังสีวิทยาวินิจฉัย</td>\n",
-       "      <td>0.655652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n",
-       "      <td>0.348124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n",
-       "      <td>0.277816</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>การขับร้องประสานเสียงขั้นพื้นฐาน</td>\n",
-       "      <td>0.256033</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>วิทยาศาสตร์การแพทย์คลินิก สาขาวิชาเวชศาสตร์ฉุก...</td>\n",
-       "      <td>0.231116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>140</th>\n",
-       "      <td>หลักเศรษฐศาสตร์สาธารณสุข (Principle of Health ...</td>\n",
-       "      <td>0.226498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>หลักการบริหารงานสาธารณสุข (Principle of Public...</td>\n",
-       "      <td>0.196069</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...</td>\n",
-       "      <td>0.183915</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  Course     Score\n",
-       "Index                                                             \n",
-       "43     การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...  0.676301\n",
-       "42     การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...  0.676301\n",
-       "110                                   รังสีวิทยาวินิจฉัย  0.655652\n",
-       "131    หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...  0.348124\n",
-       "152    เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...  0.277816\n",
-       "29                      การขับร้องประสานเสียงขั้นพื้นฐาน  0.256033\n",
-       "117    วิทยาศาสตร์การแพทย์คลินิก สาขาวิชาเวชศาสตร์ฉุก...  0.231116\n",
-       "140    หลักเศรษฐศาสตร์สาธารณสุข (Principle of Health ...  0.226498\n",
-       "130    หลักการบริหารงานสาธารณสุข (Principle of Public...  0.196069\n",
-       "133    หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...  0.183915"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "recommender_tfidf_by_user('PORPHAING JANTIP', 10)"
+    "# print(recommender_tfidf_by_user(user_input).to_html(index=False))"
    ]
   },
   {
@@ -696,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "af84469a",
    "metadata": {},
    "outputs": [],
@@ -714,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "1f14300b",
    "metadata": {},
    "outputs": [],
@@ -750,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3ca45e3b",
    "metadata": {},
    "outputs": [],
